# VectorMatrixTensorLib

./: LICENSE  README.md  pyproject.toml  vec2.py  vecn.py
src/: __init__.py
src/Matrices/: matC.py  matD.py  matF.py  matnm.py  matnn.py
src/Vectors/: __init__.py  vec2.py  vec3.py  vec4.py  vec4R.py  vecC.py  vecF.py  vecP.py  vecW.py  vecn.py
