[project]
name = "Vector_Matrix_Tensor_Library"
version = "0.0.1"
authors = [
  { name="Mattia Ballico", email="NONE" },
]
description = "This package contains modules to easly work with vectors, matrices and tensors"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License NONE",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
